# WASM-and-AI

./: .gitignore  README.md  ai_demonstration.ipynb
wasm_ia/: Cargo.toml  index.html  main.js  worker.js
wasm_ia/src/: lib.rs  mlp.rs  tmp.rs
