[package]
name = "wasm_ia"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
linreg= "0.2"
rand = "0.8.3"
chrono = "0.4.19"
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = "0.4"
# wasm-timer = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
